1.扩展AD本地物理地址到8位。 2.定义状态8为版本好，例本次版本号位x"01090006",其中0109是日期可以认为是小版本号，0006对应龙泉0.6位大版本号。 3.状态9为物理地址。

--- a/constrains/ZJUprojectsV3.ucf
+++ b/constrains/ZJUprojectsV3.ucf
@@ -504,12 +504,19 @@ NET "TX_src_MAC_addr[0]" LOC = W29;
 NET "TX_src_MAC_addr[1]" LOC = Y29;
 NET "TX_src_MAC_addr[2]" LOC = W31;
 NET "TX_src_MAC_addr[3]" LOC = W32;
-
+NET "TX_src_MAC_addr[4]" LOC = V32;
+NET "TX_src_MAC_addr[5]" LOC = V33;
+NET "TX_src_MAC_addr[6]" LOC = Y32;
+NET "TX_src_MAC_addr[7]" LOC = Y31;
 
 NET "TX_src_MAC_addr[0]" PULLUP;
 NET "TX_src_MAC_addr[1]" PULLUP;
 NET "TX_src_MAC_addr[2]" PULLUP;
 NET "TX_src_MAC_addr[3]" PULLUP;
+NET "TX_src_MAC_addr[4]" PULLUP;
+NET "TX_src_MAC_addr[5]" PULLUP;
+NET "TX_src_MAC_addr[6]" PULLUP;
+NET "TX_src_MAC_addr[7]" PULLUP;
 NET "user_pushbutton" CLOCK_DEDICATED_ROUTE = FALSE;
 NET "user_pushbutton" TIG;
 #set_false_path -to [get_nets ];
